MODROLESKC-40 Increase code coverage